[tool.poetry]
name = "leetgds"
version = "0.1.0"
description = ""
authors = ["Liu Hancheng <liuhancheng.cn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.9"
gdstk = "0.9.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
